@@ -29,6 +29,7 @@ Feature wishes:
 - PR#4898: new Sys.big_endian boolean for machine endianness
 - PR#5236: new '%revapply' primitive with the semantics 'revapply x f = f x'
 - ocamldebug: ability to inspect values containing code pointers
+- ocamldebug: new 'environment' directive to set environment variables for debugee
 
 Objective Caml 3.12.1:
 ----------------------
